firefox-trunk (73.0~a1~hg20191202r504851-0ubuntu1) UNRELEASED; urgency=medium

  [ Rico Tzschichholz ]
  * Update cbindgen to 0.12.0
    - debian/build/create-tarball.py
  * Drop browser/chrome.manifest which is not available or required anymore
    - debian/firefox.install.in

  [ Olivier Tilloy ]
  * Use the upstream Build ID, to ensure it is the same across Ubuntu releases
    for a given firefox version (LP: #1851936)
    - debian/build/create-tarball.py
    - debian/build/rules.mk
    - debian/config/mozconfig.in

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Tue, 03 Dec 2019 10:32:36 +0100

firefox-trunk (72.0~a1~hg20191201r504785-0ubuntu1) focal; urgency=medium

  [ Rico Tzschichholz ]
  * Add explicit build-dep on libclang-*-dev
    - debian/control{,.in}
  * Update cbindgen to 0.10.0
    - debian/build/create-tarball.py
  * Exclude autoconf files from integrity check
    - debian/patches/drop-some-file-integrity-checks.patch
  * Bump build-dep on clang >= 8
    - debian/control{,.in}
    - debian/build/rules.mk

  [ Olivier Tilloy ]
  * Update symbolic icon to match the latest firefox brand update
    (the asset was downloaded from https://mozilla.design/firefox/logos-usage/)
    - debian/symbolic.svg

  [ Jean-Louis Dupond ]
  * Fix a typo in debian/README.Debian.in

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Sun, 01 Dec 2019 17:31:23 +0100

firefox-trunk (71.0~a1~hg20191019r498279-0ubuntu1) eoan; urgency=medium

  [ Olivier Tilloy, Rico Tzschichholz ]
  * Build with clang, as official firefox builds are now produced with clang
    and select the highest clang version available to avoid hardcoding
    one version for each supported Ubuntu release:
    - debian/build/rules.mk
    - debian/config/mozconfig.in
    - debian/control{,.in}

  [ Rico Tzschichholz ]
  * Update patches
    - debian/patches/partially-revert-google-search-update.patch
  * Add Tagalog and Triqui language packs
    - update debian/config/locales.all