@@ -90,14 +90,14 @@ ac_add_options --enable-profiling
 %%endif
 mk_add_options "export MOZ_BUILD_DATE=@MOZ_BUILDID@"
 ac_add_options --with-clang-path=/usr/bin/clang-@DEB_LLVM_VERSION@ --with-libclang-path=/usr/lib/llvm-@DEB_LLVM_VERSION@/lib/
-mk_add_options "export CC=clang-@DEB_LLVM_VERSION@"
-mk_add_options "export CXX=clang++-@DEB_LLVM_VERSION@"
-mk_add_options "export AS=clang-@DEB_LLVM_VERSION@"
-mk_add_options "export LLVM_CONFIG=/usr/bin/llvm-config-@DEB_LLVM_VERSION@"
-mk_add_options "export CBINDGEN=@TOPSRCDIR@/@DEB_BUILDDIR@/cbindgen/bin/cbindgen"
+ac_add_options CC=clang-@DEB_LLVM_VERSION@
+ac_add_options CXX=clang++-@DEB_LLVM_VERSION@
+ac_add_options AS=clang-@DEB_LLVM_VERSION@
+ac_add_options LLVM_CONFIG=/usr/bin/llvm-config-@DEB_LLVM_VERSION@
+ac_add_options CBINDGEN=@TOPSRCDIR@/@DEB_BUILDDIR@/cbindgen/bin/cbindgen
 %%if DISTRIB_VERSION == 1604
-mk_add_options "export NODEJS=/usr/lib/nodejs-mozilla/bin/node"
-mk_add_options "export NASM=/usr/lib/nasm-mozilla/bin/nasm"
+ac_add_options NODEJS=/usr/lib/nodejs-mozilla/bin/node
+ac_add_options NASM=/usr/lib/nasm-mozilla/bin/nasm
 %%endif
 %%if DEB_HOST_ARCH != i386
 %%if DEB_HOST_ARCH != armhf
